--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,17 @@ psycopg2-binary
 sqlalchemy
 
 
+streamlit==1.37.0
+openai==1.40.0
+python-dotenv==1.0.1
+youtube-transcript-api==0.6.2
+yt-dlp==2024.11.18
+google-api-python-client==2.154.0
+isodate==0.6.1
+fpdf==1.7.2
+SQLAlchemy==2.0.30
+psycopg2-binary==2.9.9
+pydub==0.25.1
 
 
 
